fixed menu collapse width, deleted unnecessary images

--- a/layout.css
+++ b/layout.css
@@ -15,6 +15,47 @@ html {
     height: 100%;
 }
 
+/*** NAVIGATION ***/
+
+/* Make Bootstrap navbar collapse to mobile at 1000px instead of 768 */
+
+@media (max-width: 1000px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+  		display:block !important;
+	}
+}
+
 /* Main navbar atop the page */
 .navbar {
     background-color: #F77F00;
@@ -48,7 +89,7 @@ html {
 /* Added padding to increase navbar height on standard screen */
 @media(min-width:767px) {
     .navbar li a {
-        padding: 20px;  //maintains space around links to allow for the tagline below the navbar brand 
+        padding: 20px 10px 20px 10px;  //maintains space around links to allow for the tagline below the navbar brand 
     }
 }
 /* Currently selected/active navbar link */
@@ -69,7 +110,9 @@ html {
     }
 }
 
-/**** Sections ****/
+/*** SECTIONS ***/
+
+/** Intro section and intro content **/
 
 .intro-section {
     background-image: URL("../images/intro_bg.png");
@@ -112,6 +155,8 @@ html {
     font-weight: bold;
 }
 
+/** Generic section style **/
+
 .section-limestone {
     background-color: #F0EDE4;
 }
@@ -134,6 +179,8 @@ html {
     }
 }
 
+/** Footer section and content **/
+
 .footer-section {
     color: #FFF;
     background-color: #4C4D4F;
@@ -151,6 +198,5 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     font-weight: bold;
-    //color: #006C93;
     text-align: center;
 }
